@@ -6,7 +6,7 @@ bin_PROGRAMS = lcdproc
 
 lcdproc_SOURCES = main.c main.h mode.c mode.h batt.c batt.h chrono.c chrono.h cpu.c cpu.h cpu_smp.c cpu_smp.h disk.c disk.h load.c load.h mem.c mem.h eyebox.c eyebox.h machine.h machine_Linux.c machine_OpenBSD.c machine_FreeBSD.c machine_NetBSD.c machine_Darwin.c machine_SunOS.c util.c util.h iface.c iface.h
 
-lcdproc_LDADD = ../../shared/libLCDstuff.a @ldap_libs@ 
+lcdproc_LDADD = ../../shared/libLCDstuff.a
 
 if DARWIN
 AM_LDFLAGS = -framework CoreFoundation -framework IOKit
