@@ -6,7 +6,7 @@ sbin_PROGRAMS=LCDd
 
 LCDd_SOURCES= client.c client.h clients.c clients.h input.c input.h main.c main.h menuitem.c menuitem.h menu.c menu.h menuscreens.c menuscreens.h parse.c parse.h render.c render.h screen.c screen.h screenlist.c screenlist.h serverscreens.c serverscreens.h sock.c sock.h widget.c widget.h drivers.c drivers.h driver.c driver.h
 
-LDADD = ../shared/libLCDstuff.a commands/libLCDcommands.a @ldap_libs@
+LDADD = ../shared/libLCDstuff.a commands/libLCDcommands.a
 
 if !DARWIN
 AM_LDFLAGS = -rdynamic -uget_args
